// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avoid shortening link in code block inside comment 1`] = `
"<div class=\\"highlight highlight-source-ts\\">
			<pre class=\\"rgh-linkified-code\\">
				<span class=\\"pl-s\\">
					<a href=\\"https://raw.githubusercontent.com/denosaurs/mod.land/master/cnames.ts\\" rel=\\"noreferrer noopener\\" class=\\"rgh-linkified-code\\">
						https://raw.githubusercontent.com/denosaurs/mod.land/master/cnames.ts
					</a>
				</span>
			</pre>
		</div>"
`;

exports[`avoid shortening link in embedded file preview inside comment 1`] = `
"<div class=\\"comment-body markdown-body js-comment-body soft-wrap user-select-contain d-block\\">
			<div class=\\"Box Box--condensed my-2\\">
				<div itemprop=\\"text\\" class=\\"Box-body p-0 blob-wrapper blob-wrapper-embedded data\\">
					<table class=\\"highlight tab-size mb-0 js-file-line-container\\" data-tab-size=\\"8\\" data-paste-markdown-skip=\\"\\">
						<tbody>
							<tr class=\\"border-0\\">
								<td id=\\"LC45\\" class=\\"blob-code border-0 px-3 py-0 color-bg-default blob-code-inner js-file-line rgh-linkified-code\\">
									<span class=\\"pl-c\\">//
										<a href=\\"https://github.com/sindresorhus/refined-github/issues/522#issuecomment-311271274\\" rel=\\"noreferrer noopener\\" class=\\"rgh-linkified-code\\">
											https://github.com/sindresorhus/refined-github/issues/522#issuecomment-311271274
										</a>
									</span>
								</td>
							</tr>
						</tbody>
					</table>
				</div>
			</div>
		</div>"
`;

exports[`avoid shortening links in suggestion inside review comment 1`] = `
"<div class=\\"comment-body markdown-body js-comment-body soft-wrap user-select-contain d-block\\">
			<div class=\\"my-2 border rounded-2 js-suggested-changes-blob diff-view\\">
				<div itemprop=\\"text\\" class=\\"blob-wrapper data file\\" style=\\"margin: 0; border: none; overflow-y: visible; overflow-x: auto;\\">
					<table class=\\"d-table tab-size mb-0 width-full\\" data-paste-markdown-skip=\\"\\">
						<tbody>
							<tr class=\\"border-0\\">
								<td class=\\"border-0 px-2 py-1 blob-code-inner blob-code-addition js-blob-code-addition blob-code-marker-addition\\">
									https:<span class=\\"pl-c\\">//github.com/refined-github/refined-github</span><span class=\\"pl-kos\\"></span>
								</td>
							</tr>
						</tbody>
					</table>
				</div>
			</div>
		</div>"
`;

exports[`shorten link in comment text 1`] = `
"<td class=\\"d-block comment-body markdown-body js-comment-body\\">
			<p dir=\\"auto\\">
				<a href=\\"https://github.com/darkred/test/compare/main...t2?expand=1\\">darkred/test@<code>main...t2</code>?expand=1 (compare)</a>
			</p>
		</td>"
`;

exports[`shorten link in review comment text 1`] = `
"<div class=\\"comment-body markdown-body js-comment-body soft-wrap user-select-contain d-block\\">
			<p dir=\\"auto\\">
				<a href=\\"https://github.com/refined-github/refined-github\\">refined-github/refined-github</a>
			</p>
		</div>"
`;
